--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "devDependencies": {
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier-plugin-css-order": "^1.3.0"
-  }
+	"dependencies": {
+		"eslint": "latest",
+		"eslint-config-prettier": "latest",
+		"eslint-plugin-prettier": "latest",
+		"prettier": "latest",
+		"prettier-plugin-css-order": "latest",
+		"stylelint": "latest",
+		"stylelint-config-standard": "latest",
+		"stylelint-config-prettier": "latest"
+	}
 }
